2005-07-23  Chenthill Palanisamy  <pchenthill@novell.com>

	* gui/e-cal-popup.[ch]: (needs_to_accept),
	(e_cal_popup_target_new_select): Added a mask 
	to check if the meeting needs to be accepted.
	* gui/e-calendar-view.c: Increased the index of the 
	labels.
	* gui/e-day-view.c: (set_text_as_bold):
	* gui/e-week-view.c: (set_text_as_bold): Show as bold
	even if the attendee property is not found, since it might
	be a mailing list. The attendee will be added once he accepts 
	meeting.

2005-07-22  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #309991
	* gui/e-cal-model.c: (ensure_dates_are_in_default_zone),
	(e_cal_view_objects_added_cb): 
	* gui/gnome-cal.c: (ensure_dates_are_in_default_zone),
	(dn_e_cal_view_objects_added_cb): If the start date and end
	date are in UTC convert them to default zone while displaying.

2005-07-21  Shakti Sen  <shprasad@novell.com>

	* gui/e-tasks.c (e_tasks_init): Creating the tasks-menu.
	* gui/tasks-control.c (tasks_control_activate,
	tasks_control_deactivate): Activated/deactivated the menu.
	In brief, added support for 'Tasks' menu creation.

	Fixes bug #310985.

2005-07-21  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #309602
	* gui/e-day-view.c: (set_text_as_bold),
	(e_day_view_update_event_label),
	(e_day_view_update_long_event_label),
	(e_day_view_ensure_rows_visible):
	* gui/e-week-view.c: (set_text_as_bold),
	(e_week_view_update_event_cb): Check if the backend
	allows to adding the unaccepted appointments to calendar
	and show its summary as bold text.
	
2005-07-21  Harish Krishnaswamy  <kharish@novell.com>

	* gui/gnome-cal.c (gnome_calendar_class_init),
	(adjust_e_cal_view_sexp), (display_view),
	(gnome_calendar_change_view):
	* gui/gnome-cal.h:
	Fixes #245331. Keybindings for switching b/w
	calendar views.

2005-07-20  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #310340
	* gui/e-calendar-view.c:
	(e_calendar_view_delete_selected_occurrence): Check if the 